# DeepLearning

./: .gitignore  README.md
Lab1/: CMakeLists.txt  README.md
Lab1/src/: Layer.cpp  Layer.h  MnistReader.cpp  MnistReader.h  TwoLayerNN.cpp  TwoLayerNN.h  main.cpp
Lab2/: README.md
Lab2/doc/: Отчет по лабораторной работе №2.docx
Lab2/src/: bespalov_twolayer_nn_mnist_example.py  cnn.py  cnn_one_chanell.py  fсnn.py  fсnn_one_channel.py  tensorflow_example.py
Lab3/experiments/: 2conv_10000_5.txt  2conv_norm_10000_5.txt  3conv_10000_5.txt  alexnet_10000_5.txt  alexnet_50000_5.txt
Lab3/src/: alexnet.py  convolutional_cnn.py  deep_cnn.py  tensorflow_conv_example.py
Lab4/experiments/: experiment.txt  flnn_one_channel_experiment_result.txt  flnn_one_channel_with_stack_autoencoder_result.txt
Lab4/src/: convolutional_cnn-with_autoencoder.py  flnn_one_channel_with_autoencoder.py  flnn_one_channel_with_stack_autoencoder.py
Lab5/experiments/: resnet_v2_50_new_weights.txt  resnet_v2_50_pretrained_fixed.txt  resnet_v2_50_pretrained_flex.txt
Lab5/src/: resnet_new_weights.py  resnet_pretrained_fixed_weights.py  resnet_pretrained_flex_weights.py
data/: README.md  tfrecords_converter.py  tfrecords_reader.py  unzip_dataset.py
